force-app/main/default/objects/Trainee__c/fields/Competency_1__c.field-meta.xml
<CustomField>
    <fullName>Competency_1__c</fullName>
    <label>Competency 1</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Competency</valueSetName>
    </valueSet>
</CustomField>