force-app/main/default/objects/Trainee__c/fields/Evaluation_Performance__c.field-meta.xml
<CustomField>
    <fullName>Evaluation_Performance__c</fullName>
    <label>Evaluation Performance</label>
    <summarizedField>Trainee_Evaluation__c.Total_Percent__c</summarizedField>
    <summaryForeignKey>Trainee_Evaluation__c.Trainee_Name__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>