force-app/main/default/objects/Trainee__c/fields/General_Awareness_Performance__c.field-meta.xml
<CustomField>
    <fullName>General_Awareness_Performance__c</fullName>
    <label>General Awareness Performance</label>
    <summarizedField>Trainee_General_Evaluation__c.Average_Skill__c</summarizedField>
    <summaryForeignKey>Trainee_General_Evaluation__c.Trainee__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>