force-app/main/default/objects/Trainee__c/fields/Office_Location__c.field-meta.xml
<CustomField>
    <fullName>Office_Location__c</fullName>
    <label>Office-Location</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>India-Bengaluru</fullName>
            </value>
            <value>
                <fullName>India-Bhuvneshwar</fullName>
            </value>
            <value>
                <fullName>India-Mumbai</fullName>
            </value>
            <value>
                <fullName>India-Udaipur</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>