force-app/main/default/objects/Trainee__c/fields/Trailhead_Badges__c.field-meta.xml
<CustomField>
    <fullName>Trailhead_Badges__c</fullName>
    <label>Trailhead Badges</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>